--- a/styles/styles.css
+++ b/styles/styles.css
@@ -32,9 +32,13 @@ body{
 /*header*/
 
 .header{
+    position:fixed;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
+    background: transparent;
+    z-index: 1;
 }
 
 /*navbar*/
@@ -49,7 +53,7 @@ body{
 }
 
 .navbar-links{
-    margin:0 1.2% 0 1.2%;
+    margin:0 1% 0 1%;
     font-weight: 700;
     transition: .5s;
     padding: .75% 1.3% .75% 1.3%;
@@ -66,14 +70,23 @@ body{
 /*home*/
 
 .home{
+    position: relative;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 100vh;
+    align-items: center;
+    padding: 70px 10% 0;
 }
 
 .home-content h3{
     font-size: 3.2rem;
     font-weight: 700;
+}
+
+span{
+    color: var(--main-color);
 }
 
 .home-content h1{
@@ -89,8 +102,8 @@ body{
 }
 
 .home-img img{
-    height: 350px;
-    width: 350px;
+    height: 450px;
+    width: 450px;
     border-radius: 50%;
     box-shadow: 0 0 5rem 3rem var(--main-color);
     border: 5px solid rgba(0, 238, 255, 0.5);
@@ -116,4 +129,21 @@ body{
     background: var(--main-color);
     color: var(--second-bg-color);
     box-shadow: 0 0 1rem var(--main-color);
+}
+
+.btn{
+    display: inline-block;
+    padding: 1rem 2.8rem;
+    background: var(--main-color);
+    border-radius: 4rem;
+    box-shadow: 0 0 1rem var(--main-color);
+    font-size: 1.6rem;
+    color: var(--second-bg-color);
+    letter-spacing: .1rem;
+    font-weight: 600;
+    transition: all .2s ease;
+}
+
+.btn:hover{
+    box-shadow: none;
 }
