--- a/styles/styles.css
+++ b/styles/styles.css
@@ -48,17 +48,22 @@ body{
 .navbar{
     display: flex;
     justify-content: center;
-    margin: 1.8% 0 1.8% 0;
-    width: 100%;
+    width: 42%;
+    min-width: 600px;
+    margin: 1.5% 0 1.5% 0;
+    padding: .8% 0 .8% 0;
+    border-radius: 20px;
+    background-color: transparent;
 }
 
 .navbar-links{
     margin:0 1% 0 1%;
     font-weight: 700;
     transition: .5s;
-    padding: .75% 1.3% .75% 1.3%;
+    padding: 1.5% 3.5% 1.5% 3.5%;
     color: var(--text-color);
     border-radius: 20px;
+    text-shadow: 0 0 1rem var(--main-color);
 }
 
 .navbar-links:hover, .navbar-links.active{
@@ -102,8 +107,8 @@ span{
 }
 
 .home-img img{
-    height: 450px;
-    width: 450px;
+    height: 400px;
+    width: 400px;
     border-radius: 50%;
     box-shadow: 0 0 5rem 3rem var(--main-color);
     border: 5px solid rgba(0, 238, 255, 0.5);
