--- a/styles/styles.css
+++ b/styles/styles.css
@@ -101,6 +101,10 @@ body{
 /*HOME*/
 /*HOME*/
 
+section{
+    padding: 100px 10% 0;
+}
+
 .home{
     display: flex;
     align-items: center;
@@ -108,7 +112,6 @@ body{
     width: 100%;
     height: 100vh;
     align-items: center;
-    padding: 70px 10% 0;
 }
 
 .home-content{
@@ -207,9 +210,8 @@ span{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 70px 10% 0;
     gap: 5rem;
-    background: linear-gradient(var(--bg-color), var(--second-bg-color), var(--second-bg-color), var(--second-bg-color));
+    background: linear-gradient(var(--bg-color), var(--second-bg-color), var(--second-bg-color), var(--second-bg-color), var(--second-bg-color), var(--second-bg-color));
 }
 
 .about-content{
@@ -218,10 +220,8 @@ span{
 
 .about-img img{
     width: 35vw;
-}
-
-.about-img img{
     border-radius: 50%;
+    margin: 10vh 0 10vh 0;
 }
 
 .heading{
@@ -243,9 +243,56 @@ span{
     margin: 1.2rem 0 2rem;
 }
 
-.sec{
-    padding: 70px 10% 0;
+/*SERVICES*/
+/*SERVICES*/
+/*SERVICES*/
+/*SERVICES*/
+/*SERVICES*/
+
+.services{
+    background: linear-gradient(var(--second-bg-color), var(--bg-color), var(--bg-color), var(--bg-color), var(--bg-color), var(--bg-color));
+}
+
+.services h2{
+    margin-bottom: 4rem;
+    margin-top: 5rem;
+}
+
+.services-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 2rem;
+}
+
+.services-container .services-box{
+    flex: 1 1 30rem;
     background: var(--second-bg-color);
+    padding: 3rem 2rem 4rem;
+    text-align: center;
+    border: .2rem solid var(--bg-color);
+    border-radius: 4rem;
+    transition: .5s ease;
+}
+
+.services-container .services-box:hover{
+    border-color: var(--main-color);
+    transform: scale(1.02);
+}
+
+.services-box i{
+    font-size: 7rem;
+    color: var(--main-color);
+}
+
+.services-box h3{
+    font-size: 2.4rem;
+}
+
+.services-box p{
+    font-size: 1.4rem;
+    margin: 1rem 0 3rem;
 }
 
 ::selection{
