creating the structure of the portfolio section

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -295,6 +295,14 @@ span{
     margin: 1rem 0 3rem;
 }
 
+/*PORTFOLIO*/
+/*PORTFOLIO*/
+/*PORTFOLIO*/
+/*PORTFOLIO*/
+/*PORTFOLIO*/
+
+
+
 ::selection{
     background-color: transparent;
     color: rgb(169, 88, 176);
