styling contact me section

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -240,7 +240,7 @@ span{
 }
 
 .about-content p{
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     margin: 1.2rem 0 2rem;
 }
 
@@ -389,7 +389,45 @@ span{
 /*CONTACT*/
 /*CONTACT*/
 
+.contact h2{
+    margin-bottom: 3rem;
+}
 
+.contact form{
+    max-width: 70rem;
+    margin: 1rem auto;
+    text-align: center;
+    margin-bottom: 3rem;
+}
+
+.contact form .input-box{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.contact form .input-box input,
+.contact form textarea{
+    width: 100%;
+    padding: 1.5rem;
+    font-size: 1.6rem;
+    color: var(--text-color);
+    background: var(--second-bg-color);
+    border-radius: .8rem;
+    margin: .7rem 0;
+}
+form .btn{
+    margin-top: 2rem;
+    cursor: pointer;
+}
+
+.contact form .input-box input{
+    width: 49%;
+}
+
+.contact form textarea{
+    resize: none;
+}
 
 ::selection{
     background-color: transparent;
