--- a/styles/styles.css
+++ b/styles/styles.css
@@ -75,7 +75,7 @@ section{
 }
 
 #menu-icon{
-    position: absolute;
+    position: fixed;
     font-size: 5rem;
     color: var(--text-color);
     display: none;
@@ -197,11 +197,11 @@ span{
     font-weight: 600;
     transition: all .2s ease;
     animation: fadeInRight 1.5s ease forwards;
-    margin-top: 4rem;
 }
 
 .home .btn{
     margin-left: 21%;
+    margin-top: 3em;
 }
 
 .btn:hover{
@@ -245,6 +245,10 @@ span{
 .about-content p{
     font-size: 1.4rem;
     margin: 1.2rem 0 2rem;
+}
+
+.about .btn{
+    margin-top: 1.1em;
 }
 
 /*SERVICES*/
@@ -574,7 +578,13 @@ form .btn{
 /*1200px*/
 @media (max-width: 1200px) {
     html {
-        font-size: 55%;
+        font-size: 60%;
+    }
+}
+
+@media (max-width: 903px) {
+    .protfolio-container{
+        grid-template-columns: repeat(2, 1fr);
     }
 }
 
@@ -602,6 +612,7 @@ form .btn{
 
     .footer{
         padding: 2rem 3%;
+        margin-top: 10vh;
     }
 }
 
@@ -612,8 +623,12 @@ form .btn{
     }
 
     section{
-        padding: 10.52vh 2% 0;
+        padding: 15vh 2% 0;
         height: fit-content !important;
+    }
+
+    .heading{
+        padding: 1.1em;
     }
 
     /*MENU ICON*/
@@ -682,7 +697,7 @@ form .btn{
     }
 
     .home-img img{
-        width: 30vw;
+        width: 50vw;
         margin-top: 2.5vh;
         animation: zoomIn 2s ease forwards, boxShadowAnimationMobile 2s ease forwards, floatImageMobile 4s ease-in-out infinite;
         animation-delay: 1s, 2s, 3s;
@@ -692,10 +707,23 @@ form .btn{
     .home-content p{
         margin-right: 20vw;
         margin-left: 20vw;
+        font-size: 1.4rem;
     }
 
     .home .btn{
         margin-left: 0;
+    }
+
+    .home .social-media a{
+        width: 6vw;
+        height: 6vw;
+        font-size: 3vw;
+    }
+
+    .btn{
+        height: 5.5vw;
+        width: 25vw;
+        font-size: 2.2vw;
     }
 
     /*ABOUT*/
@@ -704,10 +732,23 @@ form .btn{
 
     .about{
         flex-direction: column-reverse;
+        margin-top: 10rem;
+    }
+
+    .about .heading{
+        text-align: center;
+        margin: 2rem;
     }
 
     .about img{
         width: 70vw;
+        margin: 10vh 0 10vh 0;
+    }
+
+    .about-content p{
+        margin-right: 10vw;
+        margin-left: 10vw;
+        margin-top: 2vw;
     }
 
     .services h2{
@@ -720,6 +761,10 @@ form .btn{
 
     .protfolio-container{
         grid-template-columns: repeat(2, 1fr);
+    }
+
+    .footer{
+        margin-top: 20vh;
     }
 
     /*ANIMATION 768px*/
