--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+/* GENERAL STYLES */
+/* GENERAL STYLES */
+/* GENERAL STYLES */
+
 *{
   padding: 0;
   margin: 0;
@@ -40,161 +44,14 @@ section{
   padding: 10.52vh 10% 0;
 }
 
-
-
-/*HEADER*/
-/*HEADER*/
-/*HEADER*/
-/*HEADER*/
-/*HEADER*/
-
-.header{
-  position:fixed;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: transparent;
-  z-index: 1;
-}
-
-/*NAVBAR*/
-/*NAVBAR*/
-/*NAVBAR*/
-/*NAVBAR*/
-/*NAVBAR*/
-
-.navbar{
-  display: flex;
-  justify-content: center;
-  width: 42vw;
-  margin: .75% 0 .75% 0;
-  padding: .8% 0 .8% 0;
-  border-radius: 20px;
-  background-color: transparent;
-}
-
-.navbar-links{
-  margin:0 1% 0 1%;
-  font-weight: 700;
-  transition: .5s;
-  padding: 1% 3.5% 1.5% 3.5%;
-  color: var(--text-color);
-  border-radius: 20px;
-  text-shadow: 0 0 1.5rem var(--main-color);
-  font-size: 1.5rem;
-}
-
-#menu-icon{
-  position: fixed;
-  font-size: 5rem;
-  color: var(--text-color);
-  display: none;
-  right: 3vw;
-  top: 3vh;
-}
-
-/*animating the navbar elements*/
-.navbar-links:nth-of-type(1){
-  animation: fadeInRight 1.5s ease forwards;
-}
-.navbar-links:nth-of-type(2){
-  animation: fadeInRight 1.5s ease forwards;
-}
-.navbar-links:nth-of-type(3){
-  animation: zoomIn 1.5s ease forwards;
-}
-.navbar-links:nth-of-type(4){
-  animation: fadeInLeft 1.5s ease forwards;
-}
-.navbar-links:nth-of-type(5){
-  animation: fadeInLeft 1.5s ease forwards;
-}
-/*end*/
-
-.navbar-links:hover, .navbar-links.active{
-  color: var(--main-color);
-  text-shadow: 0 0 3rem var(--main-color);
-}
-
-/*HOME*/
-/*HOME*/
-/*HOME*/
-/*HOME*/
-/*HOME*/
-
-.home{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 100%;
-  height: 100vh;
-  align-items: center;
-}
-
-.home-content{
-  position: relative;
-  animation: fontEnlargment 1.5s ease forwards;
-}
-
-.home-content h3{
-  font-size: 3.2rem;
-  font-weight: 700;
-  animation: fadeInRight 1.5s ease forwards; 
-}
-
 span{
   color: var(--main-color);
   text-shadow: 0 0 1.7rem var(--main-color);
 }
 
-.home-content h1{
-  position: relative;
-  font-size: 5.6rem;
-  font-weight: 700;
-  line-height: 1.3;
-  animation: fadeInLeft 2.5s ease forwards;
-}
-
-.home-content p{
-  line-height: 1.5em;
-  margin-right: 15%;
-  margin-top: 2rem;
-}
-
-.home-img img{
-  height: auto;
-  width: 30vw;
-  border-radius: 50%;
-  border: 5px solid rgba(0, 238, 255, 0.5);
-  opacity: 0;
-  animation: zoomIn 1.7s ease forwards, boxShadowAnimation 1.8s ease forwards, floatImage 4s ease-in-out infinite;
-  animation-delay: 1s, 2s, 3s;
-}
-
-.social-media a{
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  width: 4rem;
-  height: 4rem;
-  background: transparent;
-  border: .3rem solid var(--main-color);
-  border-radius: 50%;
-  font-size: 2rem;
-  color: var(--main-color);
-  margin: 3rem 1.5rem 0 0;
-  opacity: 0%;
-  animation: fadeInLeft 1s ease forwards;
-  animation-delay: calc(.1s * var(--i));
-  transition: background .3s ease, color .3s ease;
-}
-
-.social-media a:hover{
-  background: var(--main-color);
-  color: var(--second-bg-color);
-  box-shadow: 0 0 1rem var(--main-color);
-}
+/* BUTTONS */
+/* BUTTONS */
+/* BUTTONS */
 
 .btn{
   display: inline-block;
@@ -210,292 +67,8 @@ span{
   animation: fadeInRight 1.5s ease forwards;
 }
 
-.home .btn{
-  margin-left: 21%;
-  margin-top: 3em;
-}
-
 .btn:hover{
   box-shadow: none;
-}
-
-/*ABOUT*/
-/*ABOUT*/
-/*ABOUT*/
-/*ABOUT*/
-/*ABOUT*/
-
-.about{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 5rem;
-  background: linear-gradient(var(--bg-color), var(--second-bg-color), var(--second-bg-color), var(--second-bg-color), var(--second-bg-color), var(--second-bg-color));
-}
-
-.about-img img{
-  width: 35vw;
-  border-radius: 50%;
-  margin: 10vh 0 10vh 0;
-}
-
-.heading{
-  text-align: center;
-  font-size: 4.5rem;
-}
-
-.about-content h2{
-  text-align: left;
-  line-height: 1.2;
-}
-
-.about-content h3{
-  font-size: 2.6rem;
-}
-
-.about-content p{
-  font-size: 1.4rem;
-  margin: 1.2rem 0 2rem;
-}
-
-.about .btn{
-  margin-top: 1.1em;
-}
-
-/*SERVICES*/
-/*SERVICES*/
-/*SERVICES*/
-/*SERVICES*/
-/*SERVICES*/
-
-.services{
-  background: linear-gradient(var(--second-bg-color), var(--bg-color), var(--bg-color), var(--bg-color), var(--bg-color), var(--bg-color));
-  padding: 10.52vh 10% 11.5vh;
-
-}
-
-.services h2{
-  margin-bottom: 4rem;
-  margin-top: 4rem;
-}
-
-.services-container{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-  gap: 2rem;
-}
-
-.services-box{
-  flex: 1 1 30rem;
-  background: var(--second-bg-color);
-  padding: 3rem 2rem 4rem;
-  text-align: center;
-  border: .2rem solid var(--bg-color);
-  border-radius: 4rem;
-  transition: .5s ease;
-}
-
-.services-box:hover{
-  border-color: var(--main-color);
-  transform: scale(1.02);
-}
-
-.services-box i{
-  font-size: 7rem;
-  color: var(--main-color);
-}
-
-.services-box h3{
-  font-size: 2.6rem;
-}
-
-.services-box p{
-  font-size: 1.4rem;
-  margin: 1rem 0 3rem;
-}
-
-/*PORTFOLIO*/
-/*PORTFOLIO*/
-/*PORTFOLIO*/
-/*PORTFOLIO*/
-/*PORTFOLIO*/
-
-.portfolio{
-  background: linear-gradient(var(--bg-color), var(--second-bg-color), var(--second-bg-color), var(--second-bg-color), var(--second-bg-color), var(--second-bg-color));
-  padding: 10.52vh 10%;
-}
-
-.portfolio h2{
-  margin-bottom: 4rem;
-}
-
-.protfolio-container{
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  align-items: center;
-  gap: 1rem;
-}
-
-.portfolio-box{
-  position: relative;
-  border-radius: 2rem;
-  box-shadow: 0 0 1rem var(--bg-color);
-  overflow: hidden;
-  display: flex;
-  height: 95%;
-  width: 95%;
-}
-
-.portfolio-box img{
-  width: 100%;
-  transition: .5s ease;
-}
-
-.portfolio-box:hover img{
-  transform: scale(1.1);
-}
-
-.portfolio-layer{
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(rgba(0,0,0,.5), rgba(0, 238, 255, .6));
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  text-align: center;
-  padding: 0 4rem;
-  transform: translateY(100%);
-  transition: .5s ease;
-}
-
-.portfolio-box:hover .portfolio-layer{
-  transform: translateY(0);
-}
-
-.portfolio-layer h4{
-  font-size: 2.8rem;
-}
-
-.portfolio-layer p{
-  font-size: 1.4rem;
-  margin: .3rem 0 1rem;
-}
-
-.portfolio-layer a{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 4rem;
-  height: 4rem;
-  background: var(--text-color);
-  border-radius: 50%;
-}
-
-.portfolio-layer a i{
-  font-size: 1.9rem;
-  color: var(--second-bg-color);
-}
-
-/*CONTACT*/
-/*CONTACT*/
-/*CONTACT*/
-/*CONTACT*/
-/*CONTACT*/
-
-.contact{
-  background: linear-gradient(var(--second-bg-color), var(--bg-color), var(--bg-color), var(--bg-color), var(--bg-color), var(--bg-color));
-}
-
-.contact h2{
-  margin-bottom: 3rem;
-}
-
-.contact form{
-  max-width: 70rem;
-  margin: 1rem auto;
-  text-align: center;
-  margin-bottom: 3rem;
-}
-
-.contact form .input-box{
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
-
-.contact form .input-box input,
-.contact form textarea{
-  width: 100%;
-  padding: 1.5rem;
-  font-size: 1.6rem;
-  color: var(--text-color);
-  background: var(--second-bg-color);
-  border-radius: .8rem;
-  margin: .7rem 0;
-}
-form .btn{
-  margin-top: 2rem;
-  cursor: pointer;
-}
-
-.contact form .input-box input{
-  width: 49%;
-}
-
-.contact form textarea{
-  resize: none;
-}
-
-/*FOOTER*/
-/*FOOTER*/
-/*FOOTER*/
-/*FOOTER*/
-/*FOOTER*/
-
-.footer{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: center;
-  padding: 2rem 9%;
-  background: var(--second-bg-color);
-}
-
-.footer-text p{
-  font-size: 1.6rem;
-}
-
-.footer-text span{
-  transition: .2s ease;
-}
-
-.footer-text span:hover{
-  text-shadow: 0 0 0;
-}
-
-.footer-iconTop a{
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  padding: .6rem;
-  background: var(--main-color);
-  border-radius: .8rem;
-  transition: .5s ease;
-}
-
-.footer-iconTop a:hover{
-  box-shadow: 0 0 2rem var(--main-color);
-}
-
-.footer-iconTop a i{
-  font-size: 2.5rem;
-  color: var(--second-bg-color);
 }
 
 ::selection{
@@ -587,12 +160,14 @@ form .btn{
 /*RESPONSIVE*/
 
 /*1200px*/
+/*1200px*/
 @media (max-width: 1200px) {
   html {
       font-size: 60%;
   }
 }
 
+/*991px*/
 /*991px*/
 @media (max-width: 991px){
   .header {
@@ -628,6 +203,7 @@ form .btn{
 }
 
 
+/*768px*/
 /*768px*/
 @media (max-width: 768px){
   *{
@@ -843,6 +419,7 @@ form .btn{
 }
 
 /*617px*/
+/*617px*/
 @media (max-width: 617px){
   .navbar{
       width: 50vw;
@@ -862,6 +439,8 @@ form .btn{
   }
 }
 
+/* 450 */
+/* 450 */
 @media (max-width: 450px){
   html{
       font-size: 65%;
@@ -872,6 +451,9 @@ form .btn{
   }
 }
 
+
+/* 365 */
+/* 365 */
 @media (max-width: 365px){
   .home-img img{
       width: 90vw;
